<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mocktestActivity">

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submit"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/_02_29_30"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="557dp"
        app:layout_constraintBottom_toTopOf="@+id/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_number"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:hint="@string/question_x"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/find_the_value_of_x_in_the_given_figure" />

            <ImageView
                android:id="@+id/Question_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/options"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="80 Degree">

                <RadioButton
                    android:id="@+id/a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/a" />

                <RadioButton
                    android:id="@+id/b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/b" />

                <RadioButton
                    android:id="@+id/c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/c" />

                <RadioButton
                    android:id="@+id/d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/d" />

                <RadioButton
                    android:id="@+id/e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e" />

            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveandnext"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveAndNext"
        android:text="@string/save_and_next"
        app:layout_constraintBaseline_toBaselineOf="@+id/skip"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/skip"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:onClick="skip"
        android:text="@string/skip"
        app:layout_constraintBottom_toTopOf="@+id/chemistry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/chemistry"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="chemistry"
        android:text="@string/chemistry"
        app:layout_constraintBaseline_toBaselineOf="@+id/maths"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/markforreview"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:onClick="markForReview"
        android:text="@string/mark_for_review"
        app:layout_constraintBaseline_toBaselineOf="@+id/skip"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/physics"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:onClick="physics"
        android:text="@string/physics"
        app:layout_constraintBaseline_toBaselineOf="@+id/chemistry"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/maths"
        style="@style/Widget.MaterialComponents.TimePicker.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="maths"
        android:text="@string/mathemactics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>